[tool.poetry]
name = "midi-to-floating-point"
version = "0.1.0"
description = "Simple MIDI 0-127 to 0-1 float conversion"
authors = ["gsspdev <108854023+gsspdev@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "midi_to_floating_point"}]

[tool.poetry.dependencies]
python = "^3.11"
python-rtmidi = "^1.5.2"
py-midi = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
